# acadia

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  todo.txt
shader/triangle/: triangle.frag  triangle.vert
shaders/: cube.slang  default.slang  devgui-text.slang  shadow.slang  triangle.slang
shaders/default/: default.frag  default.vert
shaders/gizmo/: arch.slang  transform3d-rotate.slang  transform3d-translate.slang
shaders/shadow-test/: light-pass.slang  shadow-pass.slang  shadow-view.slang
shaders/text/: text.frag  text.vert
shaders/triangle/: triangle.frag  triangle.vert
src/: app.rs  buffer.rs  camera.rs  common.rs  descriptors.rs  entity.rs  image.rs  input.rs  lib.rs  light.rs  main-bakcup.rs  main.cpp  main.rs  mesh.rs  pipeline.rs  renderer.rs  scene-backup.rs  scene.rs  shader.rs  swapchain.rs  texture.rs  util.rs  vkbase.rs
src/assets/: mesh.rs  mod.rs  shader.rs  texture.rs
src/gui/: font.rs  mod.rs
src/gui/gizmo/: mod.rs
src/gui/gizmo/transform3d/: mod.rs  rotate.rs  translate.rs
