[package]
name = "acadia"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
ash = { version = "0.38.0", default-features = false, features = [
    "linked",
    "debug",
    "std",
] }
ash-window = "0.13.0"
tobj = "4.0.3"
glam = { version = "0.30.5", features = ["debug-glam-assert"] }
libc = "0.2.175"

[build-dependencies]
cc = "1.2.33"
